impl MyInternalMap keySet & entrySet() func